# Advanced Multi-Mission Operations System (AMMOS) Instrument Toolkit (AIT)
# Bespoke Link to Instruments and Small Satellites (BLISS)
#
# Copyright 2017, by the California Institute of Technology. ALL RIGHTS
# RESERVED. United States Government Sponsorship acknowledged. Any
# commercial use must be negotiated with the Office of Technology Transfer
# at the California Institute of Technology.
#
# This software may be subject to U.S. export control laws. By accepting
# this software, the user agrees to comply with all applicable U.S. export
# laws and regulations. User has the responsibility to obtain export licenses
# or other export authority as may be required before exporting such
# information to foreign countries or providing access to foreign persons.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ait-gui"
version = "2.3.2-rc1"
description = """\
    A framework for building a custom website for realtime telemetry \
    monitoring, commanding, and other MOS operations, built atop the \
    AIT Core libraries.\
    """
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/NASA-AMMOS/AIT-GUI"
repository = "https://github.com/NASA-AMMOS/AIT-GUI"
documentation = "https://ait-gui.readthedocs.io/en/latest"
authors = ['AMMOS Instrument Toolkit Development Team <ait-pmc@googlegroups.com>']
packages = [
    {include = "ait"}
]

[tool.poetry.dependencies]
python   = "^3.7"
ait-core = ">=2.3.0"
greenlet = "1.1.3"

[tool.poetry.dev-dependencies]
sphinx                   = '>= 4.2'
sphinx-rtd-theme         = '*'
sphinxcontrib-httpdomain = '*'
sphinx-js                = '*'
pre-commit               = '*'
